# plotmol

./: .gitattributes  .gitignore  .lgtm.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  index.html  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  lint.yaml
devtools/: README.md
devtools/conda-envs/: test-env.yaml
devtools/envs/: base.yaml
examples/: scatter-plot.ipynb  test-visualization.html  test-visualization.py
plotmol/: __init__.py  _plotmol.py  _version.py  plotmol.py  styles.py  utilities.py
plotmol/tests/: test_plotmol.py  test_utilities.py
plotmol/tests/utilities/: test_rdkit.py
plotmol/utilities/: rdkit.py
