[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer", "rdkit", "bokeh"]
build-backend = "setuptools.build_meta"

[project]
name = "plotmol"
description = "Interactive plotting of data annotated with molecule structures."
authors = [ {name = "Simon Boothroyd"} ]
license = { text = "MIT" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["rdkit", "bokeh"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "plotmol.__version__"}

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "plotmol/_version.py"
versionfile_build = "plotmol/_version.py"
tag_prefix = ""
parentdir_prefix = "plotmol-"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E266", "E501", "W503"]
select = ["B","C","E","F","W","T4","B9"]

[tool.coverage.run]
omit = ["**/tests/*", "**/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ = .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
